# chip8-rs

./: Cargo.toml  README.md
chip8-term/: Cargo.toml
chip8-term/src/: main.rs  terminal.rs
chip8-wasm/: Cargo.toml  index.html  index.js  package.json  web.config  webpack.config.js
chip8-wasm/src/: lib.rs
chip8-wasm/src/shaders/: fragment.rs  vertex.rs
chip8-winit/: Cargo.toml
chip8-winit/src/: main.rs  ui_pixels.rs
emulator/: Cargo.toml
emulator/src/: emulator.rs  instruction.rs  ui.rs
