[package]
name = "chip8-winit"
version = "0.1.0"
authors = ["Hugo Camboulive <hugo@camboulive.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.4"
winit = "0.22.2"
winit_input_helper = "0.6.0"
emulator = { path = "../emulator" }
